# BitKoop-CLI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  simple-release.yml
bitkoop_miner_cli/: README.md  cli.py  constants.py
bitkoop_miner_cli/business/: auth.py  codes.py  delete_code_logic.py  product_categories.py  ranking.py  recheck_code_logic.py  status.py  submit_code_logic.py  view_codes_logic.py
bitkoop_miner_cli/commands/: auth.py  delete_code_command.py  leaderboard.py  leaderboard_command.py  rank.py  rank_command.py  recheck.py  replace.py  sites.py  status.py  submit_code_command.py  view_codes.py  view_product_categories.py
bitkoop_miner_cli/utils/: base_api_client.py  common_utils.py  display.py  formatting.py  network.py  supervisor_api_client.py  validator_api_client.py  wallet.py
bitkoop_miner_cli/utils/chain/metagraph/: metagraph_client.py
koupons_miner_cli/: README.md  cli.py  constants.py
koupons_miner_cli/business/: codes.py  delete_code_logic.py  product_categories.py  ranking.py  recheck_code_logic.py  status.py  submit_code_logic.py  view_codes_logic.py
koupons_miner_cli/commands/: auth.py  delete_code_command.py  leaderboard.py  rank.py  recheck.py  replace.py  sites.py  status.py  submit_code_command.py  view_codes.py  view_product_categories.py
koupons_miner_cli/utils/: base_api_client.py  common_utils.py  display.py  formatting.py  supervisor_api_client.py  validator_api_client.py  wallet.py
koupons_miner_cli/utils/chain/: metagraph.py
koupons_miner_cli/utils/chain/metagraph/: metagraph_client.py  metagraph_models.py
tests/: test_api_client_simple.py  verify_message.py
tests/business/: __init__.py  test_coupon_codes_business.py
tests/commands/: test_delete_coupon_code.py  test_replace_coupon_code.py  test_submit_coupon_code.py  test_view_coupon_codes.py
tests/metagraph/: test_metagraph.py
