[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitkoop-miner-cli"
version = "0.1.0"
description = "Command-line interface for BitKoop mining operations"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "ydc-p-dev", email = "ydc.dev4@gmail.com" }
]
dependencies = [
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "aiohttp",
    "rich",
    "click",
    "fiber[full] @ git+https://github.com/rayonlabs/fiber.git@2.4.1",
    "pycountry"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-mock",
]

[project.scripts]
bitkoop = "bitkoop_miner_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bitkoop_miner_cli"]

[tool.hatch.metadata]
allow-direct-references = true

# Ruff configuration
[tool.ruff]
# Enable common rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

line-length = 88
target-version = "py39"

# Fix settings
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["bitkoop_miner_cli"]
